# Proyecto1

./: .gitignore  Articulo.cpp  Articulo.h  Biblioteca.cpp  Biblioteca.h  CMakeLists.txt  Coleccion.cpp  Coleccion.h  Exception.cpp  Exception.h  GestorArchivos.cpp  GestorArchivos.h  GestorPrestamos.cpp  GestorPrestamos.h  Libro.cpp  Libro.h  Limpieza.cpp  Limpieza.h  Lista.cpp  Lista.h  ListaUsuarios.cpp  ListaUsuarios.h  MaterialDigital.cpp  MaterialDigital.h  MaterialFisico.cpp  MaterialFisico.h  Materiales.cpp  Materiales.h  Menu.cpp  Menu.h  Nodo.cpp  Nodo.h  Prestamo.cpp  Prestamo.h  Revista.cpp  Revista.h  Usuario.cpp  Usuario.h  Utilities.cpp  Utilities.h  (+3 more)
